front_end/ui/legacy/toolbar.css
/* ... */
.toolbar-shadow.wrappable {
  flex-wrap: wrap;
  overflow: visible;
}

.toolbar-shadow.toolbar-grow-vertical {
  height: initial;
}

.toolbar-shadow.vertical {
  flex-direction: column;
  height: auto;
  align-items: flex-start;
}

.toolbar-item {
  position: relative;
  display: flex;
  background-color: transparent;
  flex: none;
  align-items: center;
  justify-content: center;
  padding: 0;
  height: var(--toolbar-height);
  border: none;
  white-space: pre;
}

.toolbar-item,
.toolbar-item .devtools-link {
  color: var(--color-text-secondary);
}

.toolbar-item:last-of-type {
  flex-shrink: 1;
}

.toolbar-shadow.vertical .toolbar-item {
  height: auto;
  min-height: var(--toolbar-height);
  white-space: normal;
}

.toolbar-dropdown-arrow {
  background-color: var(--color-text-secondary);
  pointer-events: none;
  flex: none;
}

.toolbar-button.dark-text .toolbar-dropdown-arrow {
  background-color: var(--color-text-primary);
}

select.toolbar-item:disabled + .toolbar-dropdown-arrow {
  opacity: 50%;
}
/* Toolbar item */

.toolbar-button {
  white-space: nowrap;
  overflow: hidden;
  min-width: 28px;
  background: transparent;
  border-radius: 0;
}

.toolbar-text {
  margin: 0 5px;
  flex: none;
  color: var(--color-text-secondary);
}

.toolbar-text:empty {
  margin: 0;
}

.toolbar-has-dropdown {
  justify-content: space-between;
  padding: 0 3px 0 5px;
  border: 1px solid transparent;
}

.toolbar-has-dropdown-shrinkable {
  flex-shrink: 1;
}

.toolbar-has-dropdown .toolbar-text {
  margin: 0 4px 0 0;
  text-overflow: ellipsis;
  flex: auto;
  overflow: hidden;
  text-align: right;
}

.toolbar-has-glyph .toolbar-text {
  margin-left: -4px;
}

.toolbar-render-as-links * {
  font-weight: initial;
  color: var(--color-link);
  text-decoration: underline;
  cursor: pointer;
}

.toolbar-render-as-links button {
  height: 15px;
  margin: 2px;
}

.toolbar-render-as-links button:focus-visible {
  outline: auto 5px -webkit-focus-ring-color;
}

:not(.toolbar-render-as-links) .toolbar-button:focus-visible::before {
  position: absolute;
  top: 2px;
  bottom: 2px;
  left: 2px;
  right: 2px;
  background-color: var(--color-background-elevation-2);
  border-radius: 2px;
  content: "";
  /* This ::before rule serves as a background for an element.
  Setting z-index to make sure it's always below the content. */
  z-index: -1;
}

.toolbar-icon {
  --icon-color: var(--color-text-secondary);

  flex: none;
}

.toolbar-glyph {
  background-color: var(--color-text-secondary);
  flex: none;
}
/* Button */

.toolbar-button:disabled {
  opacity: 50%;
}

/* Two of the buttons are special in the main toolbar: the close button needs to
be fixed to the right so it never goes out of the viewport even if other items
push it. And the main menu button next to it that needs to make some space for
it. */
.toolbar-button.close-devtools {
  position: absolute;
  right: 0;
}

:host-context(.right) .toolbar-button.main-menu,
:host-context(.left) .toolbar-button.main-menu,
:host-context(.bottom) .toolbar-button.main-menu {
  margin-inline-end: 28px;
}

.toolbar-button.copied-to-clipboard::after {
  content: attr(data-content);
  position: fixed;
  margin-top: calc(2 * var(--toolbar-height));
  padding: 3px 5px;
  color: var(--color-text-secondary);
  background: var(--color-background-elevation-1);
  animation: 2s fade-out;
  font-weight: normal;
  border: 1px solid var(--color-details-hairline);
  border-radius: 3px;
}

@keyframes fade-out {
  from {
    opacity: 100%;
  }

  to {
    opacity: 0%;
  }
}

.toolbar-button.toolbar-state-on .toolbar-glyph {
  background-color: var(--color-primary);
}

.toolbar-button.toolbar-state-on .toolbar-icon {
  --icon-color: var(--color-primary);
}

.toolbar-state-on.toolbar-toggle-with-dot .toolbar-icon::after,
.toolbar-state-on.toolbar-toggle-with-dot .toolbar-text::after {
  content: "";
  position: absolute;
  bottom: 2px;
  background-color: var(--color-primary);
  width: 4.5px;
  height: 4.5px;
  border: 2px solid var(--override-toolbar-background-color, --color-background);
  border-radius: 50%;
}

.toolbar-state-on.toolbar-toggle-with-dot .toolbar-text::after {
  right: 0;
}

.toolbar-button.toolbar-state-on.toolbar-toggle-with-red-color .toolbar-glyph,
.toolbar-button.toolbar-state-off.toolbar-default-with-red-color .toolbar-glyph {
  background-color: var(--color-accent-red) !important; /* stylelint-disable-line declaration-no-important */
}

.toolbar-button.toolbar-state-on.toolbar-toggle-with-red-color .toolbar-icon,
.toolbar-button.toolbar-state-off.toolbar-default-with-red-color .toolbar-icon {
  --icon-color: var(--color-accent-red) !important;  /* stylelint-disable-line declaration-no-important */

  background-color: var(--color-accent-red) !important; /* stylelint-disable-line declaration-no-important */
}

.toolbar-button:not(.toolbar-has-glyph):not(.toolbar-has-dropdown):not(.largeicon-menu):not(.toolbar-button-secondary) {
  font-weight: bold;
}

.toolbar-blue-on-hover .toolbar-button:not(.toolbar-state-on):enabled:hover:not(:active) {
  background-color: var(--color-primary);
}

.toolbar-blue-on-hover .toolbar-button:not(.toolbar-state-on):enabled:active:hover {
  background-color: var(--color-primary);
}

.toolbar-toggled-gray:not(.toolbar-render-as-links) .toolbar-button:not(.toolbar-has-glyph):not(.toolbar-has-dropdown):not(.largeicon-menu):hover {
  background-color: var(--color-background-elevation-1);
}

.toolbar-button.dark-text .toolbar-text {
  color: var(--color-text-primary) !important;  /* stylelint-disable-line declaration-no-important */
}

.toolbar-button.toolbar-state-on .toolbar-text {
  color: var(--color-primary);
}

:not(.toolbar-render-as-links) .toolbar-button:enabled:hover:not(:active) .toolbar-glyph {
  background-color: var(--color-text-primary);
}

:not(.toolbar-render-as-links) .toolbar-button:enabled:hover:not(:active) .toolbar-icon {
  --icon-color: var(--color-text-primary);
}
/* ... */

